--- a/index.html
+++ b/index.html
@@ -61,14 +61,11 @@
 
 	<div id="slides">
 		<div class="slides-container">
-			<img src="images/main1.jpg" alt="" />
-			<img src="images/main2.jpg" alt="" />
-			<img src="images/main3.jpg" alt="" />
-			<img src="images/main35.jpg" alt="" />
-			<img src="images/main4.jpg" alt="" />
-			<img src="images/main45.jpg" alt="" />
-			<img src="images/main5.jpg" alt="" />
-			<img src="images/main6.jpg" alt="" />
+			<img src="images/1.png" alt="" />
+			<img src="images/2.jpg" alt="" />
+			<img src="images/3.jpg" alt="" />
+			<img src="images/4.jpg" alt="" />
+			
 		</div>
 		<div class="tint">
 			<div class="welcome text-center" data-scroll-reveal="enter from the top after 2s">
@@ -133,13 +130,16 @@
 				<div class="col-sm-6" data-scroll-reveal="enter from the right after 0.5s">
 					<a href="" class="lovely img-circle img-responsive"></a>
 					<h5>Sukanya Samanta</h5>
-					<p><lovely>I love reading, travelling, and laughing</lovely></p>
+					<p><lovely>I love singing, travelling, and dancing</lovely></p>
 					<ul class="social-icons">
 						<li><a href="https://www.facebook.com/sukanya.samanta.39" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							
 						<li><a href="mailto:sukanya.samanta.ece@gmail.com?Subject=Wedding" target="_blank"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 				</div>
+				<br><hr size=2>
+				<h6><p>Five Years back we saw each other on Facebook. Saurabh was in Bangalore &amp; Sukanya was in Kolkata. </p>
+						<p>Long distances have become short &amp; now we're ready to start our lives together. </p>
 				
 			</div>
 		</div>
