--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Saurabh Samanta">
 	
 	<title>Sukanya &amp; Saurabh</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/logo3.png">
 
 	<!-- Pace Loader -->
 	<script src="js/pace.min.js"></script>
@@ -69,10 +69,12 @@
 		</div>
 		<div class="tint">
 			<div class="welcome text-center" data-scroll-reveal="enter from the top after 2s">
+				<p><img src="images/logo.png" " class="img-responsive" alt="" height="300" width="300"/></p>
 				<h1>SUKANYA&amp;SAURABH</h1>
 				<p>ARE GETTING MARRIED</p>
 				<p><span></span><i class="fa fa-heart"></i><span></span></p>
 				<p>05.03.2018</p>
+				
 			</div>
 		</div>
 		<!--<div class="countdown" data-scroll-reveal="enter from the bottom after 2.5s"></div> -->
