Added Google Calendar Notification

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="marriage">
+	<meta name="description" content="Wedding Invitation">
 	<meta name="author" content="Saurabh Samanta">
 	
 	<title>Sukanya &amp; Saurabh</title>
@@ -174,7 +174,7 @@
                                                         <br/>Chatta Charial Road, Mahestala,
                                                         <br/>KOLKATA, W.B. 700141</p>
                                                         <p>Bengali Wedding Fun</p>
-							<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MHJqaTFlNzc5Z212Ymo5dHFjZDA1aGdoOGMgc2F1cmFiaC5zYW1hbnRhQG0&amp;tmsrc=saurabh.samanta%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
+							<a target="_blank" href="https://goo.gl/opjWkc"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
 						</div>
 					</div>
 					<div class="col-sm-4">
@@ -188,7 +188,7 @@
                                                         <br/>Sudampur, On Moyna-Tamluk Road,
                                                         <br/>BOLAIPONDA, W.B. 721629</p>
                                                         <p>Bengal Countryside Experience.</p>
-							<a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NTJ1cGlhOWNudWJuZzY3a2xqOTFtNTd2anIgc2F1cmFiaC5zYW1hbnRhQG0&amp;tmsrc=saurabh.samanta%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
+							<a target="_blank" href="https://goo.gl/TKYuaZ"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
 						</div>
 					</div>
 					
